# MentalSupport-V2

./: .gitignore  README.md  frontend.py  pyproject.toml
backend/: ai_agent.py  config.demo.py  main.py
